--- a/src/main/resources/templates/formCliente.html
+++ b/src/main/resources/templates/formCliente.html
@@ -194,6 +194,9 @@
     <!-- Bootstrap Tags Input Plugin Js -->
     <script src="../../../../plugins/bootstrap-tagsinput/bootstrap-tagsinput.js"></script>
 
+    <!-- Bootstrap Notify Plugin Js -->
+    <script src="../../../../plugins/bootstrap-notify/bootstrap-notify.js"></script>
+
     <!-- noUISlider Plugin Js -->
     <script src="../../../../plugins/nouislider/nouislider.js"></script>
 
