--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -35,36 +35,37 @@
         <table class="table table-hover">
             <thead>
                 <tr>
+                    <th>TIPO DE EQUIPO</th>
                     <th>COD ACTIVO</th>
                     <th>DESCRIPCION</th>
-                    <th>TIPO DE EQUIPO</th>
                     <th>SELECCIONE FALLAS</th>
-                </tr>
+                    <th>SELECCIONE</th>
+                  </tr>
             </thead>
             <tbody>
-                <tr th:each="a : ${activos}" th:if="${a.estado != 'X'}">
+                <tr th:each="a : ${activos_selec}" th:if="${a.estado != 'X'}">
 
+                  <td >
+                    <a
+                      type="button"
+                      class="btn bg-red btn-block btn-lg waves-effect"
+                      disable
+                    >
+                      <i
+                        class="material-icons"
+                        style="font-size: 20px !important"
+                        th:text="${a.tipoEquipo.icono}"
+                      ></i
+                      ><br />
+                      <span th:text="${a.tipoEquipo.equipo}"></span>
+                    </a>
+                  </td>
                     <td th:text="${a.cod_equipo}">Mark</td>
                     <td th:text="${a.descripcion}">Otto</td>
                     <td >
-                      <a
-                        type="button"
-                        class="btn bg-red btn-block btn-lg waves-effect"
-                        disable
-                      >
-                        <i
-                          class="material-icons"
-                          style="font-size: 20px !important"
-                          th:text="${a.tipoEquipo.icono}"
-                        ></i
-                        ><br />
-                        <span th:text="${a.tipoEquipo.equipo}"></span>
-                      </a>
-                    </td>
-                    <td >
                       <div class="demo-checkbox">
                         <th:block th:each="fe : ${a.tipoEquipo.fallaEquipoBajas}" th:if="${fe.estado_fallaEquipoBaja != 'X'}">
-                            <input name="id_fallaBaja" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox" th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red"  />
+                            <input th:name="'id_almacen_'+${a.id_almacen}+'_id_fallaBaja_'+${fe.fallaBaja.id_fallaBaja}" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox" th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red" />
                             <label th:text="${fe.fallaBaja.nom_fallaBaja}" th:for="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}">RED</label>
                         </th:block>
                     </div>
