--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -65,7 +65,7 @@
                     <td >
                       <div class="demo-checkbox">
                         <th:block th:each="fe : ${a.tipoEquipo.fallaEquipoBajas}" th:if="${fe.estado_fallaEquipoBaja != 'X'}">
-                            <input th:name="'id_almacen_'+${a.id_almacen}+'_id_fallaBaja_'+${fe.fallaBaja.id_fallaBaja}" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox" th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red" />
+                            <input name="id_fallaBaja" th:value="${fe.fallaBaja.id_fallaBaja}" type="checkbox" th:id="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}" class="filled-in chk-col-red" />
                             <label th:text="${fe.fallaBaja.nom_fallaBaja}" th:for="${a.id_almacen+'_'+fe.fallaBaja.id_fallaBaja}">RED</label>
                         </th:block>
                     </div>
